Fix the catalog hover menu whitespace

--- a/web/main.css
+++ b/web/main.css
@@ -87,7 +87,7 @@ li a, .dropbtn {
     display: inline-block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 11px 16px;
     text-decoration: none;
 }
 
